# cvgorod-hub

./: .cursorrules  .env.dev  .env.example  .env.prod  .env.staging  .gitignore  CONTEXT_PLAN.md  DATA_MIGRATION_RULES.md  DEBUG_REPORT.md  Dockerfile  Dockerfile.bot  README.md  SECRETS_LOCATIONS.md  SYNC_CHECKLIST.md  TELEGRAM_SYNC_INSTRUCTIONS.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  test_integrations.py
api/: __init__.py  auth.py  main.py
bot/: __init__.py  collector.py  sandbox_manager.py  sender.py
config/: __init__.py  roles.py  settings.py
deploy/: cvgorod-hub.service  deploy-prod.sh  deploy_role_model.sh  fix-api-interval.sh  pull-data.sh  push-data.sh
docs/: CLOUDFLARE_RULES.md
scripts/: README_SYNC.md  analyze_expectations.py  analyze_messages.py  analyze_sentiment.py  apply_migrations.sh  backup_db.sh  check_db_schema.sql  cron_sync_mapping.sh  debug_deepseek_chats.py  debug_deepseek_input.py  import_customers.py  init_db.sql  migrate_add_batch_sending.sql  migrate_add_customer_uuid.sql  migrate_add_customers.sql  migrate_add_cvgorod_chat_id.sql  migrate_add_patterns.sql  migrate_add_roles.sql  migrate_add_sentiment.sql  migrate_add_unique_message_index.sql  migrate_from_old.py  restore_db.sh  restore_jan14.sh  sentiment_inline.py  sentiment_simple.py  sync_cvgorod_ids.py  sync_cvgorod_ids.sh  sync_single_chat.py  sync_telegram_full.py  sync_telegram_history.py  sync_uz_mapping.py  test_context_analysis.py  test_telegram_mcp.py
services/: __init__.py  database.py  expectations.py  intent_classifier.py  mcp_path.py  message_collector.py  role_repository.py  tracker.py  uz_api.py  yandex_stt.py
tests/: __init__.py  (+1 more)
(+16 files in other folders)
