[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvgorod-hub"
version = "1.0.0"
description = "Центральный хаб для сбора и анализа сообщений Цветущий городбот"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Daniel Badygov"}
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ASYNC",  # flake8-async
    "SIM",    # flake8-simplify
    "PL",     # pylint
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
    "ASYNC109", # timeout parameter in async function
    "PLC0415", # imports inside functions (lazy loading)
    "E402",   # module level import not at top (conditional imports)
    "PLR0911", # too many return statements
    "PLW2901", # loop variable overwritten
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20", "PLR2004", "SIM117"]
"__init__.py" = ["F401", "UP035"]

[tool.ruff.lint.isort]
known-first-party = ["api", "bot", "services", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
ignore_missing_imports = true
